add clip process

--- a/test/clipboard/clip.html
+++ b/test/clipboard/clip.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
+    <!--clipboard.jsの読み込み -->
     <script src="../../node_modules/clipboard/dist/clipboard.min.js"></script>
   </head>
   <body>
