feat: add init function to UI and app

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <!-- encrypt -->
       <template v-if="encrypt">
         <span class="input-group input-group-sm mb-3">
-          <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="example@example.com">
+          <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="example@example.com"/>
         </span>
         <span class="input-group">
           <textarea class="form-control" aria-label="With textarea" placeholder="Please type plaintext!"></textarea>
@@ -42,7 +42,7 @@
         <button type="button" class="btn btn-secondary">Decrypt</button>
 
         <span class="input-group input-group-sm mb-3">
-          <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="example@example.com">
+          <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="example@example.com"/>
         </span>
         <span class="input-group">
           <textarea class="form-control" aria-label="With textarea" placeholder="Plaintext is here!"></textarea>
@@ -50,6 +50,6 @@
       </template>
     </article>
 
-    <script src="./bundle.js"></script>
+    <script src="./app.bundle.js"></script>
   </body>
 </html>
