fix: fix Decrypt button style

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         <span class="d-flex justify-content-center mb-1 input-group">
           <textarea class="form-control" aria-label="With textarea" placeholder="Please type ciphertext!" v-model="decrypt.ciphertext"></textarea>
         </span>
-        <span class="d-flex justify-content-center mb-2 input-group input-group-sm mb-3">
+        <span class="d-flex justify-content-center mb-2 input-group input-group-sm">
           <input type="password" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" placeholder="Type your password" v-model="decrypt.source_password"/>
         </span>
         <span class="d-flex justify-content-center mb-4 input-group flex-wrap">
