fix: reallocate sourcefile

--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,6 @@
       </template>
     </article>
 
-    <script src="./app.bundle.js"></script>
+    <script src="./js/app.bundle.js"></script>
   </body>
 </html>
