--- a/src/init.html
+++ b/src/init.html
@@ -29,6 +29,6 @@
       </span>
     </article>
 
-    <script src="./init.bundle.js"></script>
+    <script src="./js/init.bundle.js"></script>
   </body>
 </html>
